--- a/_stories.scss
+++ b/_stories.scss
@@ -1,9 +1,12 @@
 .stories {
-    // padding: 3.57143rem 1.42857rem;
-    padding: 0 1.42857rem;
+    padding: 3.57143rem 1.42857rem;
+    // padding: 0 1.42857rem;
     background-color: #ffffff;
+    .wrapper {
+        display: grid;
+        gap: 100px;
+    }
     &__item {
-        margin: 8.57143rem 0;
         display: flex;
         flex-direction: column;
         &:nth-child(even) {
